[tool.poetry]
name = "dbmeta"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "dbmeta", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
statistics = "^1.0.3.5"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
